BUGFIX: move scrollbar to slots div

--- a/client/stylesheets/app.styl
+++ b/client/stylesheets/app.styl
@@ -87,8 +87,6 @@ div.table
   display: flex
   flex-direction: column
   align-items: stretch
-  overflow-x: hidden
-  overflow-y: hidden
   
 .plotMenu
   z-index: 30
@@ -252,6 +250,8 @@ div.table
   align-content: flex-start
   margin-left: 5%
   margin-right: 5%
+  overflow-x: hidden
+  overflow-y: auto
 
 .slot
   flex: 1
